Removed old --add-opens (was fixed in 5.4)
Signed-off-by: Matt Bentley <mbentley@mbentley.net>